--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Grok 中文版：grok3 国内使用指南~（支持 Grok-3 和 Grok-3-reasoning，无需翻墙）【2025/04/28 更新】</title>
+    <title>Grok 中文版：grok3 国内使用指南~（支持 Grok-3 和 Grok-3-reasoning，无需翻墙）【2025/06/04 更新】</title>
     <meta name="description" content="Grok 中文版是 马斯克的 xAI 开发的 Grok 模型的中文优化版本，专为中文用户，提供更流畅、更精准的智能对话。全面体验 Grok 中文版，无需翻墙，支持 Grok-3、Grok-3-reasoning 和本地化功能。本项目为用户提供一站式的 Grok 中文版使用指南，包括国内可用的 Grok 镜像网站推荐和使用教程，帮助快速上手 Grok，无论是个人使用还是专业需求，均可无限使用 Grok-3 和 Grok-3-reasoning！">
     <meta name="keywords" content="Grok,grok,grok3,Grok3,xAI,grok官网,grok3官网,马斯克,Grok中文版,Grok中文网,Grok官网,Grok中文版镜像网站,Grok官网,Grok镜像网站,Grok镜像站,Grok网站,Grok镜像,免费Grok,国内Grok,Grok国内,Grok中文版免费,Grok免费,Grok中文站,Grok中文网站,Grok中文镜像,Grok国内版,Grok中国站,Grok,人工智能,Grok中文网官网">
     <meta property="og:title" content="Grok 中文版：grok3 国内使用指南~（支持 Grok-3 和 Grok-3-reasoning，无需翻墙）">                                       
@@ -178,8 +178,8 @@
             <h2>2025年 最新的 Grok 中文版、Grok官网入口~</h2>
             <h2>轻松使用上 Grok、Claude、ChatGPT ~</h2>
             <h3>无需翻墙、无需注册账号~ </h3>
-            <a href="https://chat.gptcat.cc/" target="_self" class="button">开始对话</a>
-            <h4>更新日期：2025/04/28</h4>
+            <a href="https://gptcat.cc/" target="_self" class="button">开始对话</a>
+            <h4>更新日期：2025/06/04</h4>
         </div>
         <div class="arrow-down" onclick="scrollToContent()">⬇️更多 Grok中文版镜像网站</div>
     </div>
